# GNN-Keras3

./: .gitignore  README.md  pyproject.toml
examples/logs/: logs.txt
src/gnn_keras/: __init__.py  backend.py  graph.py  typing.py
src/gnn_keras/datasets/: __init__.py  base.py  toy_citation.py  tu_proteins.py
src/gnn_keras/layers/: __init__.py  base.py  gat.py  gcn.py
src/gnn_keras/layers/pooling/: __init__.py  diffpool.py
src/gnn_keras/models/: __init__.py  gat_classifier.py  gcn_classifier.py
src/gnn_keras/ops/: __init__.py  graph_ops.py  sparse_ops.py
src/gnn_keras/trainers/: __init__.py  supervised.py
src/gnn_keras/utils/: __init__.py  batching.py  export.py  scipy.py
tests/: conftest.py  test_imports.py  test_layers_shapes.py  test_sparse_dense_parity.py
